--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="">
 		<script src=""></script>
-		<title>CSS 盒狀屬性 </title>
+		<title>Resume </title>
 	</head>
 		
 	<body>
-		<h4>TEST</h4>  
+		<meta http-equiv="refresh" content="0;url=https://www.cakeresume.com/1bb7ed">
 	</body>
 </html>
 <!--template.html>
