--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="">
-		<script src=""></script>
-		<title>Resume </title>
-	</head>
-		
-	<body>
-		<meta http-equiv="refresh" content="0;url=https://www.cakeresume.com/1bb7ed">
-	</body>
+<!DOCTYPE html><html><head><link rel="apple-touch-icon" sizes="57x57" href="/favicons/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/favicons/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/favicons/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/favicons/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/favicons/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/favicons/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/favicons/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/favicons/apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="/favicons/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/favicons/android-chrome-192x192.png" sizes="192x192">
+<link rel="icon" type="image/png" href="/favicons/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="/favicons/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/favicons/manifest.json">
+<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/favicons/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
+<meta name="msapplication-config" content="/favicons/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+<title>邱芳麒 | CakeResume</title>
+<meta name="description" content="邱芳麒 大家好 我畢業於萬能技術學院 環境工程系 ， 從事資訊業有十年的時間 ， 大多是在 系統整合商(SI)擔任系統工程師，主要負責伺服器的維護與系統建置的工作，當然Client的維護也是工作之一 ， 主要是駐點維護的工作 ， 目前在 中央大學 資策會 大數據分析師 養成班 進修中 。 ro..." />
+<meta name="robots" content="nofollow" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@CakeResume" />
+<meta name="twitter:title" content="邱芳麒 | CakeResume" />
+<meta name="twitter:description" content="邱芳麒 大家好 我畢業於萬能技術學院 環境工程系 ， 從事資訊業有十年的時間 ， 大多是在 系統整合商(SI)擔任系統工程師，主要負責伺服器的維護與系統建置的工作，當然Client的維護也是工作之一 ， 主要是駐點維護的工作 ， 目前在 中央大學 資策會 大數據分析師 養成班 進修中 。 ro..." />
+<meta property="og:title" content="邱芳麒 | CakeResume" />
+<meta property="og:description" content="邱芳麒 大家好 我畢業於萬能技術學院 環境工程系 ， 從事資訊業有十年的時間 ， 大多是在 系統整合商(SI)擔任系統工程師，主要負責伺服器的維護與系統建置的工作，當然Client的維護也是工作之一 ， 主要是駐點維護的工作 ， 目前在 中央大學 資策會 大數據分析師 養成班 進修中 。 ro..." />
+<meta property="og:type" content="profile" />
+<meta property="og:image" content="https://res.cloudinary.com/cakeresume/image/upload/c_fit,w_236/v1487318696/fetf6j8cywjekxbubm7d.png" />
+<meta property="og:site_name" content="CakeResume" />
+<meta property="fb:app_id" content="1082948111745623" />
+<meta property="p:domain_verify" content="42f3739bdb57862ad8dcb5c161b2faac" /><meta charset="UTF-8" /><meta content="IE=edge" http-equiv="X-UA-Compatible" />
+<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"4c861a65fa","applicationID":"10977091","transactionName":"d1hZQUYJD1sAFkpaQFFaRBpHDgxA","queueTime":3,"applicationTime":157,"agent":""}</script>
+<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,t,n){function r(n){if(!t[n]){var o=t[n]={exports:{}};e[n][0].call(o.exports,function(t){var o=e[n][1][t];return r(o||t)},o,o.exports)}return t[n].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<n.length;o++)r(n[o]);return r}({1:[function(e,t,n){function r(){}function o(e,t,n){return function(){return i(e,[(new Date).getTime()].concat(u(arguments)),t?null:this,n),t?void 0:this}}var i=e("handle"),a=e(2),u=e(3),c=e("ee").get("tracer"),f=NREUM;"undefined"==typeof window.newrelic&&(newrelic=f);var s=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],l="api-",p=l+"ixn-";a(s,function(e,t){f[t]=o(l+t,!0,"api")}),f.addPageAction=o(l+"addPageAction",!0),f.setCurrentRouteName=o(l+"routeName",!0),t.exports=newrelic,f.interaction=function(){return(new r).get()};var d=r.prototype={createTracer:function(e,t){var n={},r=this,o="function"==typeof t;return i(p+"tracer",[Date.now(),e,n],r),function(){if(c.emit((o?"":"no-")+"fn-start",[Date.now(),r,o],n),o)try{return t.apply(this,arguments)}finally{c.emit("fn-end",[Date.now()],n)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,t){d[t]=o(p+t)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,(new Date).getTime()])}},{}],2:[function(e,t,n){function r(e,t){var n=[],r="",i=0;for(r in e)o.call(e,r)&&(n[i]=t(r,e[r]),i+=1);return n}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],3:[function(e,t,n){function r(e,t,n){t||(t=0),"undefined"==typeof n&&(n=e?e.length:0);for(var r=-1,o=n-t||0,i=Array(o<0?0:o);++r<o;)i[r]=e[t+r];return i}t.exports=r},{}],ee:[function(e,t,n){function r(){}function o(e){function t(e){return e&&e instanceof r?e:e?c(e,u,i):i()}function n(n,r,o){if(!p.aborted){e&&e(n,r,o);for(var i=t(o),a=v(n),u=a.length,c=0;c<u;c++)a[c].apply(i,r);var f=s[w[n]];return f&&f.push([y,n,r,i]),i}}function d(e,t){b[e]=v(e).concat(t)}function v(e){return b[e]||[]}function g(e){return l[e]=l[e]||o(n)}function m(e,t){f(e,function(e,n){t=t||"feature",w[n]=t,t in s||(s[t]=[])})}var b={},w={},y={on:d,emit:n,get:g,listeners:v,context:t,buffer:m,abort:a,aborted:!1};return y}function i(){return new r}function a(){(s.api||s.feature)&&(p.aborted=!0,s=p.backlog={})}var u="nr@context",c=e("gos"),f=e(2),s={},l={},p=t.exports=o();p.backlog=s},{}],gos:[function(e,t,n){function r(e,t,n){if(o.call(e,t))return e[t];var r=n();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,t,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[t]=r,r}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],handle:[function(e,t,n){function r(e,t,n,r){o.buffer([e],r),o.emit(e,t,n)}var o=e("ee").get("handle");t.exports=r,r.ee=o},{}],id:[function(e,t,n){function r(e){var t=typeof e;return!e||"object"!==t&&"function"!==t?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");t.exports=r},{}],loader:[function(e,t,n){function r(){if(!h++){var e=y.info=NREUM.info,t=l.getElementsByTagName("script")[0];if(setTimeout(f.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&t))return f.abort();c(b,function(t,n){e[t]||(e[t]=n)}),u("mark",["onload",a()],null,"api");var n=l.createElement("script");n.src="https://"+e.agent,t.parentNode.insertBefore(n,t)}}function o(){"complete"===l.readyState&&i()}function i(){u("mark",["domContent",a()],null,"api")}function a(){return(new Date).getTime()}var u=e("handle"),c=e(2),f=e("ee"),s=window,l=s.document,p="addEventListener",d="attachEvent",v=s.XMLHttpRequest,g=v&&v.prototype;NREUM.o={ST:setTimeout,CT:clearTimeout,XHR:v,REQ:s.Request,EV:s.Event,PR:s.Promise,MO:s.MutationObserver},e(1);var m=""+location,b={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1016.min.js"},w=v&&g&&g[p]&&!/CriOS/.test(navigator.userAgent),y=t.exports={offset:a(),origin:m,features:{},xhrWrappable:w};l[p]?(l[p]("DOMContentLoaded",i,!1),s[p]("load",r,!1)):(l[d]("onreadystatechange",o),s[d]("onload",r)),u("mark",["firstbyte",a()],null,"api");var h=0},{}]},{},["loader"]);</script><meta content="width=device-width, initial-scale=1.0" name="viewport" /><meta name="csrf-param" content="authenticity_token" />
+<meta name="csrf-token" content="plvE757FQ2XQyz79Cv9oUlTBExk9utg8mwu3uQ1ZT7Jze2aAjrx9PueFrlwX24k8b1nJbGyCIDNFwodOtAbxkQ==" /><link rel="stylesheet" media="screen" href="https://cloud.typography.com/7004554/7789772/css/fonts.css" /><link rel="stylesheet" media="all" href="https://d2gbqcejc6c3un.cloudfront.net/assets/contentarea/main-390dfbacd487c489dd4a75764d86d0cee9428581faed85507ad1296546b9eecf.css" data-turbolinks-track="true" /><script src="https://d2gbqcejc6c3un.cloudfront.net/assets/contentarea-001c8562d365f73758bcb82d6d65901b73bb4e2c80044c0ffa94792441c363a1.js" data-turbolinks-track="true"></script><!--[if lt IE 9]><script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--><!--[if IE]><script src="https://d2gbqcejc6c3un.cloudfront.net/javascripts/excanvas.compiled.js"></script><![endif]--><!-- Mixpanel -->
+
+
+
+
+
+
+
+</head><body id="items-show"><div class="container-main container"><div id="alerts"></div><div id="global-status-container"><div id="global-status"></div></div><div class="contentarea" id="item" notranslate=""><div class="row snippet-profile-001"><div class="col-sm-2"><img data-no-retina="true" src="https://res.cloudinary.com/cakeresume/image/upload/v1487398053/l8ea74tpfbvtiilpcoxr.png" alt="head.jpg"></div><div class="col-sm-10"><h1><b>邱芳麒</b></h1><p>大家好 <br></p><p>           我畢業於萬能技術學院 環境工程系 ， 從事資訊業有十年的時間 ， 大多是在 系統整合商(SI)擔任系統工程師，主要負責伺服器的維護與系統建置的工作，當然Client的維護也是工作之一 ， 主要是駐點維護的工作 ， 目前在 中央大學 資策會 大數據分析師 養成班 進修中 。<br></p><div class="edit line-height-0">
+  <div class="social-links">          <br></div>
+</div><p><a href="mailto:email@example.com" target="_blank" rel="nofollow noopener noreferrer">ronin.chiu@gmail.com</a><br>(886) 0988-223693<br>中壢區, 桃園市</p></div></div><div class="row snippet-separator-001"><div class="col-xs-12"><hr></div></div><div class="row snippet-features-003"><div class="col-sm-12"><div class="row"><div class="col-sm-12"><h1><b>相關證照</b><br></h1></div></div><div class="row" title=""><div class="col-sm-4 item"><hr><h1>MCSE</h1><p>微軟認證系統工程師</p></div><div class="col-sm-4 item"><hr><h1>LPIC</h1><p>  Linux 國際認證</p></div><div class="col-sm-4 item"><hr><h1>VCP</h1><p>VMware Certified Professional</p></div></div><div class="row" title=""><div class="col-sm-4 item"><hr><h1>CCNA<br></h1><p> 思科認證網路工程師</p></div><div class="col-sm-4 item"><hr><h1>SCJP</h1><p>Sun Certified Programmer for Java</p></div><div class="col-sm-4 item"><hr><br></div></div></div></div><div class="row snippet-experiences-013"><div class="col-xs-12"><div class="row"><div class="col-xs-12"><h1><b>工作經歷</b></h1></div></div><div class="row" title=""><div class="col-xs-2 col-sm-1 item-bullet"></div><div class="col-xs-10 col-sm-11 item"><h3>2014 年 8 月 – 2015 年 1 月 <br></h3><p>華研科技  系統工程師SE</p><p>公司本身自行開發的 ERP 安裝與維護，與客戶的版本更新作業</p><p><br></p></div></div><div class="row" title=""><div class="col-xs-2 col-sm-1 item-bullet"></div><div class="col-xs-10 col-sm-11 item"><h3>2012 年 3 月 – 2014 年 7 月</h3><p>華經資訊  系統工程師SE</p><p>伺服器維護 ， 系統安裝 ， 虛擬化建置 ， client 電腦維護</p><p><br></p><p>主要客戶:</p><p>台灣中小企業銀行 ， 合作金庫 ， 國泰人壽 ， 華膳空廚 ........... 等<br></p></div></div><div class="row" title=""><div class="col-xs-2 col-sm-1 item-bullet"></div><div class="col-xs-10 col-sm-11 item"><h3>2008 年 8 月 – 2012 年 2 月</h3><p>衛展資訊  系統工程師SE</p><p>駐點於各公家機關資訊室的伺服器與各單位Client 維護</p><p><br></p><p>主要客戶:</p><p>台北市政府 ， 台北市停車管理處 ，經濟部 ， 台北關稅局(桃園機場大樓) ， 觀光局 ， 警察專科學校 ....... 等 <br></p></div></div></div></div></div>
+<div class="js-paloma-hook" data-palomaid="1487400755633">
+ 
+</div>
+</div>
+
+
 </html>
-<!--template.html>
